lang/examples/bad/MissingMain.gt
fn man() -> int {
    return 0;
}
